objects/External_Lead__c/External_Lead__c.object-meta.xml
<CustomObject>
    <label>External Lead</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>