objects/External_Lead__c/fields/Customer_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Customer Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>