objects/External_Lead__c/fields/Record_Creation_Date_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Record_Creation_Date_Source_System__c</fullName>
    <label>Record Creation Date (Source System)</label>
    <type>Date</type>
</CustomField>