objects/External_Lead__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>