objects/External_Lead__c/recordTypes/Agent_Lead.recordType-meta.xml
<RecordType>
    <fullName>Agent_Lead</fullName>
    <active>true</active>
    <label>Agent Lead</label>
</RecordType>