objects/External_Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Agent_Identifier__c</columns>
    <columns>Company__c</columns>
    <columns>Customer_Identifier__c</columns>
    <columns>Mobile_Phone__c</columns>
    <columns>Record_Creation_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>